ghost/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
spec:
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:5-alpine
        ports:
        - containerPort: 2368
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: ghost-pvc
      volumes:
      - name: ghost-pvc
        persistentVolumeClaim: 
          claimName: ghost-pvc
